horizontally align checkboxes & fix input box shifting

--- a/nfc-site/styles.css
+++ b/nfc-site/styles.css
@@ -28,6 +28,7 @@ input[type=text], select {
     width: 100%;
     height: 30px;
     border-radius: 2px;
+    margin: 5px auto;
 }
 
 input:focus {
@@ -35,6 +36,10 @@ input:focus {
     padding: 3px 0px 3px 3px;
     border: 2px solid rgba(81, 203, 238, 1);
     border-radius: 2px;
+}
+
+#checkboxes {
+    margin-top: 5px;
 }
 
 #maindiv {
